@@ -2,15 +2,16 @@ package com.sos.joc.boards.impl;
 
 import java.time.Instant;
 import java.time.ZoneId;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -22,7 +23,6 @@ import com.sos.joc.boards.resource.IBoardsResource;
 import com.sos.joc.classes.JOCDefaultResponse;
 import com.sos.joc.classes.JOCResourceImpl;
 import com.sos.joc.classes.board.BoardHelper;
-import com.sos.joc.classes.board.ExpectingOrder;
 import com.sos.joc.classes.inventory.JocInventory;
 import com.sos.joc.classes.order.OrderTags;
 import com.sos.joc.classes.order.OrdersHelper;
@@ -35,12 +35,18 @@ import com.sos.joc.exceptions.JocException;
 import com.sos.joc.model.board.Boards;
 import com.sos.joc.model.board.BoardsFilter;
 import com.sos.joc.model.common.Folder;
+import com.sos.joc.model.order.OrderV;
+import com.sos.joc.plan.common.PlannedBoards;
 import com.sos.schema.JsonValidator;
 
 import jakarta.ws.rs.Path;
-import js7.data.board.NoticeId;
+import js7.data.board.BoardPath;
+import js7.data.order.OrderId;
+import js7.data_for_java.board.JNoticePlace;
+import js7.data_for_java.board.JPlannedBoard;
 import js7.data_for_java.controller.JControllerState;
 import js7.data_for_java.order.JOrder;
+import js7.data_for_java.plan.JPlan;
 
 @Path("notice")
 public class BoardsResourceImpl extends JOCResourceImpl implements IBoardsResource {
@@ -113,50 +119,96 @@ public class BoardsResourceImpl extends JOCResourceImpl implements IBoardsResour
             
             JocError jocError = getJocError();
             if (contents != null) {
-                Set<String> boardNames = contents.stream().map(DeployedContent::getName).collect(Collectors.toSet());
-                if (filter.getCompact() == Boolean.TRUE) {
-                    ConcurrentMap<String, ConcurrentMap<NoticeId, Integer>> numOfExpectings = BoardHelper.getNumOfExpectingOrders(controllerState,
-                            boardNames, folders);
-                    answer.setNoticeBoards(contents.stream().filter(dc -> canAdd(dc.getPath(), permittedFolders)).map(dc -> {
-                        try {
-                            if (dc.getContent() == null || dc.getContent().isEmpty()) {
-                                throw new DBMissingDataException("doesn't exist");
-                            }
-                            return BoardHelper.getCompactBoard(controllerState, dc, numOfExpectings.getOrDefault(dc.getName(),
-                                    new ConcurrentHashMap<>()));
-                        } catch (Throwable e) {
-                            if (jocError != null && !jocError.getMetaInfo().isEmpty()) {
-                                LOGGER.info(jocError.printMetaInfo());
-                                jocError.clearMetaInfo();
-                            }
-                            LOGGER.error(String.format("[%s] %s", dc.getPath(), e.toString()));
-                            return null;
-                        }
-                    }).filter(Objects::nonNull).collect(Collectors.toList()));
-                } else {
+                Set<BoardPath> boardNames = contents.stream().map(DeployedContent::getName).map(BoardPath::of).collect(Collectors.toSet());
+                Map<BoardPath, List<JPlannedBoard>> jBoards = getPathToBoard(controllerState, boardNames);
+                
+                Map<String, OrderV> orders = Collections.emptyMap();
+                if (filter.getCompact() != Boolean.TRUE) {
                     Integer limit = filter.getLimit() != null ? filter.getLimit() : 10000;
-                    List<ExpectingOrder> eos = BoardHelper.getExpectingOrdersStream(controllerState, boardNames, folders).collect(Collectors
-                            .toList());
-                    ConcurrentMap<String, ConcurrentMap<NoticeId, List<JOrder>>> expectings = BoardHelper.getExpectingOrders(eos.stream());
-                    Map<String, Set<String>> orderTags = OrderTags.getTags(controllerId, eos.stream().map(ExpectingOrder::getJOrder), session);
+                    
+                    Set<OrderId> eos = jBoards.values().stream().flatMap(Collection::stream).map(JPlannedBoard::toNoticePlace).map(Map::values)
+                            .flatMap(Collection::stream).map(JNoticePlace::expectingOrderIds).flatMap(Collection::stream).collect(Collectors.toSet());
+                    //List<JOrder> eos = BoardHelper.getAllExpectingOrdersStream(controllerState, folders).collect(Collectors.toList());
 
-                    answer.setNoticeBoards(contents.stream().filter(dc -> canAdd(dc.getPath(), permittedFolders)).map(dc -> {
+                    Map<String, Set<String>> orderTags = OrderTags.getTagsByOrderIds(controllerId, eos.stream().map(OrderId::string), session);
+
+                    Function<JOrder, OrderV> mapJOrderToOrderV = o -> {
                         try {
-                            if (dc.getContent() == null || dc.getContent().isEmpty()) {
-                                throw new DBMissingDataException("doesn't exist");
-                            }
-                            return BoardHelper.getBoard(controllerState, dc, expectings.getOrDefault(dc.getName(), new ConcurrentHashMap<>()),
-                                    orderTags, limit, zoneId, surveyDateMillis, dbLayer.getSession());
-                        } catch (Throwable e) {
-                            if (jocError != null && !jocError.getMetaInfo().isEmpty()) {
-                                LOGGER.info(jocError.printMetaInfo());
-                                jocError.clearMetaInfo();
-                            }
-                            LOGGER.error(String.format("[%s] %s", dc.getPath(), e.toString()));
+                            return OrdersHelper.mapJOrderToOrderV(o, controllerState, true, orderTags, null, null, zoneId);
+                        } catch (Exception e) {
                             return null;
                         }
-                    }).filter(Objects::nonNull).collect(Collectors.toList()));
+                    };
+
+                    orders = OrdersHelper.getPermittedJOrdersFromOrderIds(eos, permittedFolders, controllerState).map(mapJOrderToOrderV).filter(
+                            Objects::nonNull).collect(Collectors.toMap(OrderV::getOrderId, Function.identity()));
+                    
+//                    orders = eos.stream().map(mapJOrderToOrderV).filter(Objects::nonNull).collect(Collectors.toMap(
+//                            OrderV::getOrderId, Function.identity()));
                 }
+                
+                PlannedBoards plB = new PlannedBoards(jBoards, orders, filter.getCompact() == Boolean.TRUE, controllerState);
+                
+                answer.setNoticeBoards(contents.stream().filter(dc -> canAdd(dc.getPath(), permittedFolders)).map(dc -> {
+                    try {
+                        if (dc.getContent() == null || dc.getContent().isEmpty()) {
+                            throw new DBMissingDataException("doesn't exist");
+                        }
+                        return plB.getPlannedBoard(dc);
+                    } catch (Throwable e) {
+                        if (jocError != null && !jocError.getMetaInfo().isEmpty()) {
+                            LOGGER.info(jocError.printMetaInfo());
+                            jocError.clearMetaInfo();
+                        }
+                        LOGGER.error(String.format("[%s] %s", dc.getPath(), e));
+                        return null;
+                    }
+                }).filter(Objects::nonNull).collect(Collectors.toList()));
+                
+//                Set<String> boardNames = contents.stream().map(DeployedContent::getName).collect(Collectors.toSet());
+//                if (filter.getCompact() == Boolean.TRUE) {
+//                    ConcurrentMap<String, ConcurrentMap<NoticeId, Integer>> numOfExpectings = BoardHelper.getNumOfExpectingOrders(controllerState,
+//                            boardNames, folders);
+//                    answer.setNoticeBoards(contents.stream().filter(dc -> canAdd(dc.getPath(), permittedFolders)).map(dc -> {
+//                        try {
+//                            if (dc.getContent() == null || dc.getContent().isEmpty()) {
+//                                throw new DBMissingDataException("doesn't exist");
+//                            }
+//                            return BoardHelper.getCompactBoard(controllerState, dc, numOfExpectings.getOrDefault(dc.getName(),
+//                                    new ConcurrentHashMap<>()));
+//                        } catch (Throwable e) {
+//                            if (jocError != null && !jocError.getMetaInfo().isEmpty()) {
+//                                LOGGER.info(jocError.printMetaInfo());
+//                                jocError.clearMetaInfo();
+//                            }
+//                            LOGGER.error(String.format("[%s] %s", dc.getPath(), e.toString()));
+//                            return null;
+//                        }
+//                    }).filter(Objects::nonNull).collect(Collectors.toList()));
+//                } else {
+//                    Integer limit = filter.getLimit() != null ? filter.getLimit() : 10000;
+//                    List<ExpectingOrder> eos = BoardHelper.getExpectingOrdersStream(controllerState, boardNames, folders).collect(Collectors
+//                            .toList());
+//                    ConcurrentMap<String, ConcurrentMap<NoticeId, List<JOrder>>> expectings = BoardHelper.getExpectingOrders(eos.stream());
+//                    Map<String, Set<String>> orderTags = OrderTags.getTags(controllerId, eos.stream().map(ExpectingOrder::getJOrder), session);
+//
+//                    answer.setNoticeBoards(contents.stream().filter(dc -> canAdd(dc.getPath(), permittedFolders)).map(dc -> {
+//                        try {
+//                            if (dc.getContent() == null || dc.getContent().isEmpty()) {
+//                                throw new DBMissingDataException("doesn't exist");
+//                            }
+//                            return BoardHelper.getBoard(controllerState, dc, expectings.getOrDefault(dc.getName(), new ConcurrentHashMap<>()),
+//                                    orderTags, limit, zoneId, surveyDateMillis, dbLayer.getSession());
+//                        } catch (Throwable e) {
+//                            if (jocError != null && !jocError.getMetaInfo().isEmpty()) {
+//                                LOGGER.info(jocError.printMetaInfo());
+//                                jocError.clearMetaInfo();
+//                            }
+//                            LOGGER.error(String.format("[%s] %s", dc.getPath(), e.toString()));
+//                            return null;
+//                        }
+//                    }).filter(Objects::nonNull).collect(Collectors.toList()));
+//                }
             }
             answer.setDeliveryDate(now);
             return answer;
@@ -165,7 +217,18 @@ public class BoardsResourceImpl extends JOCResourceImpl implements IBoardsResour
         } finally {
             Globals.disconnect(session);
         }
-
+    }
+    
+    private Map<BoardPath, List<JPlannedBoard>> getPathToBoard(JControllerState currentState, Set<BoardPath> boards) {
+        if (currentState == null) {
+            return Collections.emptyMap();
+        }
+        Stream<Map.Entry<BoardPath, JPlannedBoard>> stream = currentState.toPlan().values().stream().map(JPlan::toPlannedBoard).flatMap(m -> m
+                .entrySet().stream());
+        if (boards != null) {
+            stream = stream.filter(e -> boards.contains(e.getKey()));
+        }
+        return stream.collect(Collectors.groupingBy(e -> e.getKey(), Collectors.mapping(e -> e.getValue(), Collectors.toList())));
     }
 
 }
